--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -4,11 +4,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <![endif]-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- <base href="<?= $base ?>">  -->
-  <link rel="icon" href="img/favicon.png" type="image/x-icon" />
-  <title>{{ site.data.company.title }}</title>
-  <meta name="description" content="{{ site.data.company.description }}" />
-  <meta name="keywords" content="{{ site.data.company.keywords }}" />
+  <title>{{ page.title }}</title>
+  <meta property="og:title" content="{{ page.title }}" />
+  <meta property="og:locale" content="fr_FR" />
+  <meta name="description" content="{{ page.description }}" />
+  <meta property="og:description" content="{{ page.description }}" />
+  <meta name="keywords" content="{{ page.keywords }}" />
+  <link rel="canonical" href="{{ site.url }}{{ page.url }}" />
+  <meta property="og:url" content="{{ site.url }}{{ page.url }}" />
+  <meta property="og:site_name" content="{{ site.data.company.name }}" />
   <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -33,6 +37,7 @@
 
     gtag('config', 'UA-127108133-1');
   </script>
-  <script src="fonts.googleapis.com/css?family=Open+Sans:300,400,600&subset=latin,latin-ext,cyrillic,cyrillic-ext,greek,greek-ext,vietnamese);"></script>
+  <script
+    src="fonts.googleapis.com/css?family=Open+Sans:300,400,600&subset=latin,latin-ext,cyrillic,cyrillic-ext,greek,greek-ext,vietnamese);"></script>
 
 </head>
