--- a/src/_includes/javascript-bottom.html
+++ b/src/_includes/javascript-bottom.html
@@ -1,6 +1,8 @@
 <script src="{{ '/assets/js/jquery-1.11.0.min.js' | relative_url }}"></script>
 <script src="{{ '/assets/js/bootstrap.min.js' | relative_url }}"></script>
 <script src="https://use.fontawesome.com/24b7f338c4.js"></script>
+<script src="https://www.google.com/recaptcha/api.js" async defer></script>
+<script src="{{ '/assets/js/formSubmit.js' | relative_url }}"></script>
 <!-- <script src="ressources/js/bootstrap-datepicker.js" type="text/javascript"></script> -->
 <script src="{{ '/assets/js/lightbox-2.6.min.js' | relative_url }}" type="text/javascript"></script>
 <!-- <script src="ressources/js/datepicker-locales/bootstrap-datepicker.fr.js" type="text/javascript"></script> -->
@@ -8,27 +10,6 @@
 <script src="{{ '/assets/js/bxslider.min.js' | relative_url }}" type="text/javascript"></script>
 <script src="{{ '/assets/js/wow.min.js' | relative_url }}" type="text/javascript"></script>
 <script type='text/javascript' src='{{ '/assets/js/owl.carousel.js' | relative_url }}'></script>
-
-<!-- <script>
-    $('.bootstrap-datepicker input').datepicker({
-        todayBtn: "linked",
-        language: "fr",
-        autoclose: true,
-        todayHighlight: true
-    });
-</script> -->
-
-<!-- <script type="text/javascript">
-$('.clockpicker').clockpicker({
-    autoclose: true
-});
-</script> -->
-
-
-
-
-
-
 
 <script type="text/javascript">
     $(document).ready(function() {
@@ -149,13 +130,13 @@ $('.clockpicker').clockpicker({
         return false;
     });
 </script>
-<script src="ressources/js/waypoints.min.js"></script>
-<script src="" onload="this.src = (innerWidth > 992) ? 'ressources/js/jquery.counterup.min.js' : '';"></script>
+<script src="{{ '/assets/js/waypoints.min.js' | relative_url }}"></script>
+<script src="" onload="this.src = (innerWidth > 992) ? './assets/js/jquery.counterup.min.js' : '';"></script>
 <script type="text/javascript">
-    $('.count').counterUp({
-        delay: 10,
-        time: 2000
-    });
+    // $('.count').counterUp({
+    //     delay: 10,
+    //     time: 2000
+    // });
 </script>
 
 <script>
