--- a/src/_includes/pre-contact.html
+++ b/src/_includes/pre-contact.html
@@ -1,21 +1,19 @@
-<form  id="contactForm" method="post" action="{{ site.data.company.url.notify }}">
-  <input type="hidden" name="lang" value="fr" />
+<form id="contactForm" method="post" action="{{ site.data.company.url.notify }}">
   <input type="hidden" name="redirectUrl" value="{{site.data.company.url.redirect}}" />
   <input type="hidden" name="type" value="contact" />
   <input type="hidden" name="website" value="{{ site.data.company.website }}" />
   <input type="hidden" name="lang" value="{{ site.data.company.lang }}" />
   <input type="hidden" name="firstName" value="" />
-  <input type="hidden" name="condition" value="on" />
   <input type="hidden" name="key" value="{{ site.data.company.recaptcha.server }}" />
   <div class="row">
     <div class="col-sm-12">
       <div class="form-group has-feedback">
-        <input type="text" class="form-control " id="lastname" name="lastname" value="" placeholder="Nom">
+        <input type="text" class="form-control " required id="name" name="name" value="" placeholder="Nom">
       </div>
     </div>
     <div class="col-sm-12">
       <div class="form-group has-feedback">
-        <input type="text" class="form-control " id="email" name="email" value="" placeholder="E-mail">
+        <input type="text" class="form-control" required id="email" name="email" value="" placeholder="E-mail">
       </div>
     </div>
     <div class="col-sm-12">
@@ -28,8 +26,26 @@
         <textarea rows="6" name="message" class="form-control" id="message" placeholder='Message'></textarea>
       </div>
     </div>
+    <div class="col-sm-12">
+      <div class="form-group has-feedback group-rgpd">
+        <div class="checkbox info-rgpd" style="margin-top: 0;">
+          <input type="checkbox" id="condition" name="condition" class="check-rgpd" required>
+          <label for="condition">En utilisant ce formulaire, vous acceptez le stockage et la gestion de vos données par
+            ce site *</label>
+        </div>
+      </div>
+    </div>
   </div>
   <div class="div01"></div>
+  <div class="col-sm-12 text-center">
+    <div id="contact-form-response"></div>
+    <div class="form-group d-flex justify-content-center">
+      <div class="g-recaptcha" data-sitekey="{{ site.data.company.recaptcha.client}}">
+      </div>
+      <br />
+      <input style="display: none" type="submit" value="Submit" class="wpcf7-wpcf7-submit" />
+    </div>
+  </div>
   <div class="row ">
     <div class="col-xs-12 text-center">
       <button type='submit' name="precontact" class="button1">
