--- a/src/_includes/pre-devis.html
+++ b/src/_includes/pre-devis.html
@@ -1,6 +1,5 @@
 <div class="pre-devis">
   <form id="devisForm" method="post" action="{{ site.data.company.url.notify }}">
-    <input type="hidden" name="lang" value="fr" />
     <input type="hidden" name="redirectUrl" value="{{site.data.company.url.redirect}}" />
     <input type="hidden" name="type" value="devis" />
     <input type="hidden" name="website" value="{{ site.data.company.website }}" />
@@ -9,19 +8,19 @@
     <input type="hidden" name="condition" value="on" />
     <input type="hidden" name="key" value="{{ site.data.company.recaptcha.server }}" />
     <div class="row pre-reservation">
-      <div class="col-md-2 col-sm-6 clabel">
+      <div class="col-md-3 col-sm-6 clabel">
         <div class=" padl form-group has-feedback">
           <div class="user ico2"></div>
-          <input type="text" name="nom" class="form-control" placeholder="Nom" required>
+          <input type="text" name="name" class="form-control" placeholder="Nom" required>
         </div>
       </div>
-      <div class="col-md-2 col-sm-6 clabel">
+      <div class="col-md-3 col-sm-6 clabel">
         <div class=" padl form-group has-feedback">
           <div class="email ico2"></div>
           <input type="email" name="email" class="form-control" placeholder="Email" required>
         </div>
       </div>
-      <div class="col-md-2 col-sm-6 clabel">
+      <div class="col-md-3 col-sm-6 clabel">
         <div class="form-group has-feedback">
           <div class="phone ico2"></div>
           <input type="tel" name="telephone" class="form-control" placeholder="Tél" required>
@@ -41,16 +40,16 @@
           </select>
         </div>
       </div>
-      <!-- <div class="col-md-3 col-sm-12 text-center">
-        <div id="contact-form-response"></div>
+      <div class="col-md-4 text-center">
+        <div id="devis-form-response"></div>
         <div class="form-group d-flex justify-content-center">
           <div class="g-recaptcha" data-sitekey="{{ site.data.company.recaptcha.client}}">
           </div>
           <br />
           <input style="display: none" type="submit" value="Submit" class="wpcf7-wpcf7-submit" />
         </div>
-      </div> -->
-      <div class="col-md-3 col-sm-12 text-center">
+      </div>
+      <div class="">
         <button type='submit' name="devis" class="button2 btn-form">
           <span class='txt'>Envoyer</span>
         </button>
