--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -7,6 +7,7 @@
   <title>{{ page.title }}</title>
   <meta property="og:title" content="{{ page.title }}" />
   <meta property="og:locale" content="fr_FR" />
+  <link rel="icon" type="image/png" href="{{ '/assets/img/favicon.png' | relative_url }}" />
   <meta name="description" content="{{ page.description }}" />
   <meta property="og:description" content="{{ page.description }}" />
   <meta name="keywords" content="{{ page.keywords }}" />
