--- a/src/_includes/navbar.html
+++ b/src/_includes/navbar.html
@@ -9,7 +9,7 @@
   </div>
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     <ul class="menu-top">
-      <li><img src="{{ '/assets/img/logo_qualibat_rge.png' | relative_url }}" style="width: 80px; margin-right: 20px" alt="Logo RGE Qualibat" loading="lazy">&nbsp;</li>
+      <li><img src="{{ '/assets/img/logo_qualibat_rge.png' | relative_url }}" class="img-trans" style="width: 80px; margin-right: 20px" alt="Logo RGE Qualibat" loading="lazy">&nbsp;</li>
       <li><a class="{% if page.url == '/' %}active{% endif %}" href="{{ site.baseurl }}/">Accueil</a></li>
       <li><a class="{% if page.url == '/presentation/' %}active{% endif %}" href="{{ site.baseurl }}/presentation/">Présentation</a></li>
       <li><a class="{% if page.url == '/prestations/' %}active{% endif %}" href="{{ site.baseurl }}/prestations/">Nos prestations</a></li>
