--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -7154,7 +7154,7 @@ footer h3 {
 
 .owl-carousel .next-slide {
     background: url(../../assets/img/nav-icon.png) no-repeat scroll -24px 0;
-    right: -33px
+    right: -15px
 }
 
 @media (max-width:414px) {
@@ -7215,4 +7215,67 @@ section.five {
     .mini-slider{
         margin-top: 0 !important;
     }
+}
+
+/* Rendre le reCAPTCHA responsive */
+.g-recaptcha {
+    transform: scale(0.85);
+    -webkit-transform: scale(0.85);
+    transform-origin: 0 0;
+    -webkit-transform-origin: 0 0;
+  }
+  
+  @media (max-width: 400px) {
+    .g-recaptcha {
+      transform: scale(0.75);
+      -webkit-transform: scale(0.75);
+      transform-origin: 0 0;
+      -webkit-transform-origin: 0 0;
+    }
+  }
+
+.p-0 {
+    padding: 0 !important;
+}
+
+.m-0 {
+    margin: 0 !important;
+}
+
+@media (max-width: 1125px) and (min-width: 992px) {
+    .img-trans{
+        display: none;
+    }
+}
+
+
+@media (max-width: 992px) and (min-width: 768px) {
+    .img-trans{
+        width: 60px !important;
+        margin-right: 0 !important;
+    }
+
+    header nav ul li a{
+        padding: 0 10px !important;
+    }
+
+    .menu-top{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+    }
+
+    .devis-menu{
+        display: flex;
+        /* justify-content: flex-end; */
+        align-items: center;
+        height: 72px;
+        margin-top: 25px; 
+    }
+}
+
+
+body{
+    /* overflow-x: hidden; */
 }
