--- a/src/_includes/menu1.html
+++ b/src/_includes/menu1.html
@@ -12,7 +12,7 @@
           <div class="col-sm-10 col-md-8">
             {% include navbar.html %}
           </div>
-          <div class="col-sm-2 hidden-xs">
+          <div class="col-sm-2 hidden-xs p-0 devis-menu">
             <a href="{{ site.baseurl }}/devis/" class="cta3 button1">
               <span class='txt'>Devis en ligne</span>
             </a>
