--- a/src/_includes/pre-devis.html
+++ b/src/_includes/pre-devis.html
@@ -20,13 +20,13 @@
           <input type="email" name="email" class="form-control" placeholder="Email" required>
         </div>
       </div>
-      <div class="col-md-3 col-sm-6 clabel">
+      <div class="col-md-2 col-sm-6 clabel">
         <div class="form-group has-feedback">
           <div class="phone ico2"></div>
           <input type="tel" name="telephone" class="form-control" placeholder="Tél" required>
         </div>
       </div>
-      <div class="col-md-3 col-sm-6">
+      <div class="col-md-2 col-sm-6">
         <div class="form-group has-feedback">
           <div class="question ico2"></div>
           <select name="subject" class="form-control" id="subject">
@@ -40,20 +40,21 @@
           </select>
         </div>
       </div>
-      <div class="col-md-4 text-center">
+      <div class="col-md-2 col-sm-6">
+        <button type='submit' name="devis" class="button2 btn-form">
+          <span class='txt'>Envoyer</span>
+        </button>
+      </div>
+      <div class="col-md-12 col-sm-12 text-center">
         <div id="devis-form-response"></div>
-        <div class="form-group d-flex justify-content-center">
+        <div class="form-group d-flex justify-content-center" style="display: flex; justify-content: center;"> 
           <div class="g-recaptcha" data-sitekey="{{ site.data.company.recaptcha.client}}">
           </div>
           <br />
           <input style="display: none" type="submit" value="Submit" class="wpcf7-wpcf7-submit" />
         </div>
       </div>
-      <div class="">
-        <button type='submit' name="devis" class="button2 btn-form">
-          <span class='txt'>Envoyer</span>
-        </button>
-      </div>
+      
     </div>
   </form>
 </div>
