--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -11,8 +11,8 @@
   <meta name="description" content="{{ page.description }}" />
   <meta property="og:description" content="{{ page.description }}" />
   <meta name="keywords" content="{{ page.keywords }}" />
-  <link rel="canonical" href="{{ site.url }}{{ page.url }}" />
-  <meta property="og:url" content="{{ site.url }}{{ page.url }}" />
+  <link rel="canonical" href="{{ site.baseurl }}{{ page.url }}" />
+  <meta property="og:url" content="{{ site.baseurl }}{{ page.url }}" />
   <meta property="og:site_name" content="{{ site.data.company.name }}" />
   <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
